# harness-zkx

./: .gitignore  CLAUDE.md  install-hooks.py  pyproject.toml  skills-lock.json
.claude-plugin/: README.md
.claude/rules/: file-co-change-detection.md  hook-family-pattern.md  skill-authoring-standards.md  skill-conventions.md  skill-structure-convention.md
.github/: FUNDING.yml
.github/workflows/: hook-smoke-tests.yml  monthly-metrics.yml  release.yml  reusable-release.yml  tests.yml
agents/: architect.md  build-resolver.md  code-reviewer.md  convention-miner.md  developer.md  doc-updater.md  docs-lookup.md  e2e-runner.md  planner.md  python-reviewer.md  security-reviewer.md  tdd-guide.md
commands/: architect.md  build-fix.md  checkpoint.md  claw.md  code-review.md  e2e.md  eval.md  full-review.md  harness-audit.md  loop-start.md  mine-conventions.md  orchestrate.md  plan.md  prompt-optimize.md  python-review.md  python-scaffold.md  quality-gate.md  rust-test.md  skill-health.md  tdd-cycle.md  tdd.md  update-docs.md
hooks/: README.md
hooks/ensure_todo/: ensure_todo_post_tool_use.py  ensure_todo_stop.py  install.py  prompt.md
hooks/notify/: install.py  notify_user.py  prompt.md
rules/: README.md
rules/common/: agents.md  code-quality-baseline.md  coding-style.md  development-workflow.md  patterns.md  (+4 more)
scripts/: claw.js  doctor.js  ecc.js  install-apply.js  install-plan.js  list-installed.js  orchestrate-codex-worker.sh  repair.js  sessions-cli.js  skill-create-output.js  status.js  sync-ecc-to-codex.sh  uninstall.js
tests/: test_hook_install_smoke.py
(+384 files in other folders)
