[project]
name = "claude-skills-harness"
version = "0.1.0"
description = "Claude Code skills harness with documentation scrapers"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4",
    "html2text",
    "requests",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "skills/scraper/tests",
]
# skill-comply has its own pyproject.toml and needs to run from its directory
pythonpath = ["."]
addopts = "-q --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
